ISPN-10085 Hibernate51 and Hibernate53 should not report the same test name