@@ -90,6 +90,11 @@
          <artifactId>h2</artifactId>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>org.testng</groupId>
+         <artifactId>testng</artifactId>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 
    <build>
@@ -104,6 +109,27 @@
             </plugin>
          </plugins>
       </pluginManagement>
+      <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+               <dependenciesToScan>
+                  <dependency>${project.groupId}:infinispan-hibernate-cache-commons</dependency>
+               </dependenciesToScan>
+                <argLine>${forkJvmArgs} ${testjvm.jigsawArgs} -Djdk.attach.allowAttachSelf=true</argLine>
+               <systemPropertyVariables>
+                  <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
+                  <jgroups.ping.timeout>500</jgroups.ping.timeout>
+                  <jgroups.ping.num_initial_members>1</jgroups.ping.num_initial_members>
+                  <jgroups.udp.enable_bundling>false</jgroups.udp.enable_bundling>
+                  <jgroups.bind_addr>localhost</jgroups.bind_addr>
+                  <hibernate.cache.infinispan.jgroups_cfg>2lc-test-tcp.xml</hibernate.cache.infinispan.jgroups_cfg>
+                  <infinispan.test.checkThreadLeaks>false</infinispan.test.checkThreadLeaks>
+               </systemPropertyVariables>
+            </configuration>
+         </plugin>
+      </plugins>
    </build>
 
    <profiles>
